[DSA][BST][course] - code refactor