@@ -26,11 +26,11 @@ public class a13_TopViewBT {
   }
 
   private static void verticalOrder(Node root) {
-    Queue<PairTraversal> q = new LinkedList<>();
+    Queue<PairTopView> q = new LinkedList<>();
     Map<Integer, ArrayList<Integer>> map = new TreeMap<>();
-    q.add(new PairTraversal(root, 0));
+    q.add(new PairTopView(root, 0));
     while (!q.isEmpty()) {
-      PairTraversal p = q.poll();
+      PairTopView p = q.poll();
       int hd = p.hDist;
       Node curr = p.node;
 
@@ -38,13 +38,14 @@ public class a13_TopViewBT {
       if (!map.containsKey(hd)) map.put(hd, new ArrayList<>());
       map.get(hd).add(curr.data);
 
-      if (curr.left != null) q.add(new PairTraversal(curr.left, hd - 1));
-      if (curr.right != null) q.add(new PairTraversal(curr.right, hd + 1));
+      if (curr.left != null) q.add(new PairTopView(curr.left, hd - 1));
+      if (curr.right != null) q.add(new PairTopView(curr.right, hd + 1));
     }
-    for (Map.Entry val : map.entrySet()) {
-      ArrayList<Integer> list = (ArrayList<Integer>) val.getValue();
-      System.out.print(list.get(0) + " ");
+    ArrayList<Integer> res = new ArrayList<>();
+    for (Map.Entry<Integer, ArrayList<Integer>> entry : map.entrySet()) {
+      res.add(entry.getValue().getFirst());
     }
+    System.out.println(res);
   }
 }
 
